...
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jeloET"/>

            <ImageView
                android:id="@+id/slikaIV"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/default_plant"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toEndOf="@id/nazivET"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/slika_biljke_koju_dodajete" />

            <Button
                android:id="@+id/uslikajBiljkuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uslikaj_biljku"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
...
